--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
          ─────────────────────────────────────────────────────────────
          📌 APNA PUBLISHER ID YAHAN DALO: "ca-pub-XXXXXXXXXXXXXXXXX"
             → AdSense/AdMob dashboard se milega
-         📌 data-adbreak-test="on"  → TESTING mode (production me HATAO)
-         📌 data-admob-interstitial-slot → AdMob Interstitial Unit ID
-         📌 data-admob-rewarded-slot     → AdMob Rewarded Unit ID
+         📌 data-adbreak-test="on"  → ca-app-pub-9680042092367503/7542566487
+         📌 data-admob-interstitial-slot → ca-app-pub-9680042092367503/6359545005
+         📌 data-admob-rewarded-slot     → ca-app-pub-9680042092367503/1384158725
          ============================================================ -->
     <script async
-      data-adbreak-test="on"
-      data-admob-interstitial-slot="ca-app-pub-XXXXXXXXXXXXXXXXX/XXXXXXXXXX"
-      data-admob-rewarded-slot="ca-app-pub-XXXXXXXXXXXXXXXXX/XXXXXXXXXX"
+      data-adbreak-test=ca-app-pub-9680042092367503/7542566487
+      data-admob-interstitial-slot=ca-app-pub-9680042092367503/6359545005
+      data-admob-rewarded-slot=ca-app-pub-9680042092367503/1384158725
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXXX"
       crossorigin="anonymous">
     </script>
